# wasm-benchmark

./: README.md  index.html  package-lock.json  package.json  webpack.config.js
rust-wasm/: Cargo.toml
rust-wasm/pkg/: package.json  wasm_benchmark.d.ts  wasm_benchmark.js  wasm_benchmark_bg.js  wasm_benchmark_bg.wasm  wasm_benchmark_bg.wasm.d.ts
rust-wasm/src/: lib.rs
rust-wasm/src/methods/: fibonacci.rs  mod.rs  prime.rs  xxhash.rs
src/: config.js  index.js
src/controls/: helpers.js  render.js  static.js
src/methods/: fibonacci.js  index.js  prime.js  xxhash.js
src/workers/: handler.js  worker_es.js  worker_wasm.js
